...
            color: Colors.grey[600],
          ),
          automaticallyImplyLeading: _automaticallyImplyLeading,
          actions: <Widget>[
            if (!UniversalPlatform.isWeb)
              IconButton(
                key: const Key("edit_icon"),
                onPressed: () {
                  quote.param = "edit";
                  ref.read(quoteProvider.notifier).update((state) => quote);
                  Navigator.push(
                      context,
                      MaterialPageRoute(
                          builder: (context) => const QuoteAddScreen()));
                },
                icon: const Icon(Icons.edit),
              ),
            if (!UniversalPlatform.isWeb)
              IconButton(
                key: const Key("delete_icon"),
                onPressed: () {
                  ShowAlertDialog.showDeleteComformDialog(context, quote.id);
                },
                icon: const Icon(Icons.delete_forever),
              )
          ],
...
